<resources>
    <string name="app_name">My Application</string>
    <string name="mtest">mtest</string>
    <string name="date">date</string>
    <string name="title">title</string>
    <string name="todo">TODO</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>

    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="title_activity_edittest">edittest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit">edit</string>
    <string name="start">start</string>
    <string name="textview5">TextView</string>
    <string name="next">Next</string>
    <string name="endtest">Endtest</string>
    <string name="radiobutton1">RadioButton</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="radiobutton3">RadioButton</string>
    <string name="radiobutton4">RadioButton</string>
    <string name="previous1">Previous</string>
    <string name="option4">option4</string>
    <string name="question">question</string>
    <string name="option2">option2</string>
    <string name="option3">option3</string>
    <string name="option1">option1</string>
    <string name="titlle">titlle</string>
    <string name="uip">note is update</string>
    <string name="savety">note is save</string>
    <string name="total_time">Total Time</string>
    <string name="total_score">Total Score</string>
    <string name="correct_answered">Correct Answered</string>
    <string name="wrong_answered">Wrong Answered</string>
    <string name="attempted_question">Attempted question</string>
    <string name="total_question">Total question</string>
    <string name="MyTest">MyTest</string>
</resources>