<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".editactivity">

    <Button
        android:id="@+id/button8"
        android:layout_width="143dp"
        android:layout_height="52dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="184dp"
        android:layout_marginRight="184dp"
        android:layout_marginBottom="4dp"
        android:text="previous"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="129dp"
        android:layout_height="54dp"
        android:layout_marginStart="257dp"
        android:layout_marginLeft="257dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="7dp"
        android:text="next"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option2" />

    <EditText
        android:id="@+id/option32"
        android:layout_width="343dp"
        android:layout_height="68dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/option3"
        android:inputType="textMultiLine|textPersonName"
        android:textColor="#191717"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option22" />

    <EditText
        android:id="@+id/option22"
        android:layout_width="343dp"
        android:layout_height="68dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/option2"
        android:inputType="textMultiLine|textPersonName"
        android:textColor="#191717"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option12" />

    <EditText
        android:id="@+id/option42"
        android:layout_width="343dp"
        android:layout_height="68dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="100dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/option4"
        android:inputType="textMultiLine|textPersonName"
        android:linksClickable="true"
        android:textColor="#191717"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option32"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/titletext2"
        android:layout_width="378dp"
        android:layout_height="61dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="17dp"
        android:clickable="true"
        android:editable="true"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textMultiLine|textPersonName"
        android:isScrollContainer="false"
        android:textColor="#252323"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/question2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <EditText
        android:id="@+id/question2"
        android:layout_width="358dp"
        android:layout_height="81dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/question"
        android:inputType="textMultiLine|textPersonName"
        android:textColor="#191717"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titletext2" />

    <EditText
        android:id="@+id/option12"
        android:layout_width="343dp"
        android:layout_height="68dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/option1"
        android:inputType="textMultiLine|textPersonName"
        android:linksClickable="true"
        android:textColor="#191717"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question2" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="372dp"
        android:layout_height="75dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="11dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/titletext2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:ems="10"
        android:hint="answer e.g 1"
        android:inputType="textPersonName"
        android:numeric="integer"
        android:textColor="#151313"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option42" />

</androidx.constraintlayout.widget.ConstraintLayout>