<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".result">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="152dp"
        android:layout_height="42dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="56dp"
        android:textColor="#131212"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/totalques6"
        app:layout_constraintTop_toBottomOf="@+id/totalques5" />

    <TextView
        android:id="@+id/totalques6"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/total_time"
        android:textColor="#221F1F"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalques5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="87dp"
        android:layout_height="51dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="20dp"
        android:textColor="#131212"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/totalques5"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/totalques5"
        android:layout_width="225dp"
        android:layout_height="61dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_score"
        android:textColor="#221F1F"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalques4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="87dp"
        android:layout_height="51dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:textColor="#131212"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalques4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/totalques4"
        android:layout_width="225dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/correct_answered"
        android:textColor="#221F1F"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalques3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="87dp"
        android:layout_height="51dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:textColor="#131212"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalques3"
        app:layout_constraintTop_toBottomOf="@+id/totalques2" />

    <TextView
        android:id="@+id/totalques3"
        android:layout_width="225dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/wrong_answered"
        android:textColor="#221F1F"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalques2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="87dp"
        android:layout_height="51dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:textColor="#131212"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalques2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/totalques2"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/attempted_question"
        android:textColor="#221F1F"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalques" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar02"
        android:layout_width="402dp"
        android:layout_height="71dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalques"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="28dp"
        android:text="@string/total_question"
        android:textColor="#221F1F"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar02" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="87dp"
        android:layout_height="51dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:textColor="#131212"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalques"
        app:layout_constraintTop_toBottomOf="@+id/toolbar02" />

    <Button
        android:id="@+id/home"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:text="HOME"
        android:textColor="#1B1919"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalques6" />
</androidx.constraintlayout.widget.ConstraintLayout>